See how the package build reacts

--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -107,8 +107,8 @@ jobs:
       - name: Build
         run: |
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          cd build && ninja -j1 tcl_stage --verbose
-          #cmake --build build --config Release --target package
+          #cd build && ninja -j1 tcl_stage --verbose
+          cmake --build build --config Release --target package
 
 #     - name: Upload Package
 #       uses: actions/upload-artifact@v2
