--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -44,7 +44,7 @@ jobs:
         #run: cd build && ninja -j1 -v
         #run: cmake --build build --config Release --target STEPCODE_BLD && cd build/src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL_BUILD.vcxproj -t:clean && msbuild ALL_BUILD.vcxproj -v:diag
         run: |
-          cmake --build build --config Release --target package
+          cmake --build build --config Release --target ALL_BUILD
           cmake --build build --config Release --target check
 
       - name: Upload Package
