--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Configure
         run: |
-          cmake -S . -B build -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+          cmake -S . -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
           #cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
           powershell Write-VolumeCache C
           powershell Write-VolumeCache D
@@ -44,7 +44,8 @@ jobs:
         #run: cd build && ninja -j1 -v
         #run: cmake --build build --config Release --target STEPCODE_BLD && cd build/src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL_BUILD.vcxproj -t:clean && msbuild ALL_BUILD.vcxproj -v:diag
         run: |
-          cmake --build build --config Release --target package
+          cmake --build build --config Release --target ALL_BUILD
+          cmake --build build --config Release --target PACKAGE
           cmake --build build --config Release --target check
 
       - name: Upload Package
