--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -34,19 +34,15 @@ jobs:
 
       - name: Configure
         run: |
-          cmake -S . -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
           #cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+          cmake -S . -B build -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON
           powershell Write-VolumeCache C
           powershell Write-VolumeCache D
 
       - name: Build
         #run: cd build && ninja -j1 -v STEPCODE_BLD && cd src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && ninja clean && ninja -j1 -v
-        #run: cd build && ninja -j1 -v
         #run: cmake --build build --config Release --target STEPCODE_BLD && cd build/src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL_BUILD.vcxproj -t:clean && msbuild ALL_BUILD.vcxproj -v:diag
-        run: |
-          cmake --build build --config Release --target ALL_BUILD
-          cmake --build build --config Release --target PACKAGE
-          cmake --build build --config Release --target check
+        run: cmake --build build --config Release --target package
 
       - name: Upload Package
         uses: actions/upload-artifact@v2
@@ -78,7 +74,6 @@ jobs:
         run: |
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
           cmake --build build --config Release --target package
-          cmake --build build --config Release --target check
 
       - name: Upload Package
         uses: actions/upload-artifact@v2
@@ -111,9 +106,7 @@ jobs:
       - name: Build
         run: |
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          #cd build && ninja -j1 tcl_stage --verbose
           cmake --build build --config Release --target package
-          cmake --build build --config Release --target check
 
       - name: Upload Package
         uses: actions/upload-artifact@v2
