--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -9,7 +9,7 @@ on: [push]
 jobs:
   windows:
     name: Windows Latest MSVC
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       fail-fast: true
     steps:
@@ -44,11 +44,11 @@ jobs:
         #run: cmake --build build --config Release --target STEPCODE_BLD && cd build/src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL_BUILD.vcxproj -t:clean && msbuild ALL_BUILD.vcxproj -v:diag
         run: cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_Windows
-          path: ${{ github.workspace }}/build/BRL-CAD*exe
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_Windows
+#         path: ${{ github.workspace }}/build/BRL-CAD*exe
 
   linux:
     name: Ubuntu Latest GCC
@@ -75,11 +75,11 @@ jobs:
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
           cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_Linux
-          path: ${{ github.workspace }}/build/BRL-CAD*gz
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_Linux
+#         path: ${{ github.workspace }}/build/BRL-CAD*gz
 
   osx:
     name: macOS Latest Clang
@@ -108,10 +108,10 @@ jobs:
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
           cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_OSX
-          path: ${{ github.workspace }}/build/BRL-CAD*gz
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_OSX
+#         path: ${{ github.workspace }}/build/BRL-CAD*gz
 
 
