--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Setup - CMake
         uses: lukka/get-cmake@latest
 
-      - name: Setup - Ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
+#     - name: Setup - Ninja
+#       uses: seanmiddleditch/gha-setup-ninja@master
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -26,8 +26,8 @@ jobs:
         # https://github.community/t/deprecated-add-path/136621
         run: echo "$ENV{GITHUB_WORKSPACE}" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
 
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.0.2
+#     - name: Add msbuild to PATH
+#       uses: microsoft/setup-msbuild@v1.0.2
 
 #     - name: Add cl.exe to PATH
 #       uses: ilammy/msvc-dev-cmd@v1
