--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Configure
         run: |
           #cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
-          cmake -S . -B build -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON
+          cmake -S . -B build -D ENABLE_ALL=ON
           powershell Write-VolumeCache C
           powershell Write-VolumeCache D
 
