--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -22,15 +22,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-#     - name: Add github workspace to path
-#       # https://github.community/t/deprecated-add-path/136621
-#       run: echo "$ENV{GITHUB_WORKSPACE}" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
+      - name: Add github workspace to path
+        # https://github.community/t/deprecated-add-path/136621
+        run: echo "$ENV{GITHUB_WORKSPACE}" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
 
-#     - name: Add msbuild to PATH
-#       uses: microsoft/setup-msbuild@v1.0.2
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.2
 
-#     - name: Add cl.exe to PATH
-#       uses: ilammy/msvc-dev-cmd@v1
+      - name: Add cl.exe to PATH
+        uses: ilammy/msvc-dev-cmd@v1
 
       - name: Configure
         run: |
