--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Setup - CMake
         uses: lukka/get-cmake@latest
 
-#     - name: Setup - Ninja
-#       uses: seanmiddleditch/gha-setup-ninja@master
+      - name: Setup - Ninja
+        uses: seanmiddleditch/gha-setup-ninja@master
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -34,16 +34,16 @@ jobs:
 
       - name: Configure
         run: |
-          #cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
-          powershell Write-VolumeCache C
-          cmake -S . -B build -D ENABLE_ALL=ON
+          cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+          #cmake -S . -B build -D ENABLE_ALL=ON
           powershell Write-VolumeCache C
           powershell Write-VolumeCache D
 
       - name: Build
         #run: cd build && ninja -j1 -v STEPCODE_BLD && cd src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && ninja clean && ninja -j1 -v
         #run: cmake --build build --config Release --target STEPCODE_BLD && cd build/src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL_BUILD.vcxproj -t:clean && msbuild ALL_BUILD.vcxproj -v:diag
-        run: cmake --build build --config Release --target package
+        run: cd build && ninja -j1 -v
+        #run: cmake --build build --config Release --target package
 
 #     - name: Upload Package
 #       uses: actions/upload-artifact@v2
