--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,62 +32,6 @@ name: BRL-CAD
 on: [push]
 
 jobs:
-  windows:
-    name: Windows Latest MSVC
-    runs-on: windows-latest
-    strategy:
-      fail-fast: true
-    steps:
-      - name: Setup - CMake
-        uses: lukka/get-cmake@latest
-
-      - name: Setup - Ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
-
-      - name: Setup - Qt
-        uses: jurplel/install-qt-action@v2
-
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Add github workspace to path
-        # https://github.community/t/deprecated-add-path/136621
-        run: echo "$ENV{GITHUB_WORKSPACE}" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
-
-      - name: Add msbuild to PATH
-        uses: microsoft/setup-msbuild@v1.0.2
-
-      - name: Add cl.exe to PATH
-        uses: ilammy/msvc-dev-cmd@v1
-
-      - name: Configure
-        run: |
-          cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release -D BRLCAD_ENABLE_QT=ON
-          # We do the following in order to help ensure files are "flushed"
-          # to disk before compilation is attempted
-          # https://superuser.com/a/1553374/1286142
-          powershell Write-VolumeCache C
-          powershell Write-VolumeCache D
-
-      - name: Build
-        run: cd build && ninja -j1 -v && ninja check -v && ninja package
-
-        # Various other Windows build lines used for various types of testing.
-        # Preserved for reference, as the iterative time to figure out how to
-        # perform them was significant...
-        #run: cmake --build build --config Release --target package
-        #run: cd build && ninja -j1 -v STEPCODE_BLD && cd src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && ninja clean && ninja -j1 -v
-        #run: cmake --build build --config Release --target STEPCODE_BLD && cd build/src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL_BUILD.vcxproj -t:clean && msbuild ALL_BUILD.vcxproj -v:diag
-
-        # For the moment the space demands are too extreme to enable this
-        # output for every compile test, but leave the enabling logic present
-        # in commented out form so it can be enabled as needed.
-#     - name: Upload Package
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: BRLCAD_Windows
-#         path: ${{ github.workspace }}/build/BRL-CAD*exe
-
   linux:
     name: Ubuntu Latest GCC
     runs-on: ubuntu-20.04
@@ -135,20 +79,14 @@ jobs:
 #         name: BRLCAD_Linux
 #         path: ${{ github.workspace }}/build/BRL-CAD*gz
 
-  osx:
-    name: macOS Latest Clang
-    runs-on: macos-latest
+  archives:
+    name: Source Archives
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: true
     steps:
       - name: Setup - CMake
         uses: lukka/get-cmake@latest
-
-      - name: Setup - Ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
-
-      - name: Setup - Qt
-        uses: jurplel/install-qt-action@v2
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -156,24 +94,10 @@ jobs:
       - name: Configure
         run: |
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          export CC=clang
-          export CXX=clang++
-          cmake -S . -G Ninja -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release -D BRLCAD_ENABLE_QT=ON
+          cmake -S . -B build_archives -D ENABLE_ALL=ON
 
       - name: Build
         run: |
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          cd build && ninja -j1 && ninja -j1 package
-          #cmake --build build --config Release --target check
-          #cmake --build build --config Release --target package
-
-        # For the moment the space demands are too extreme to enable this
-        # output for every compile test, but leave the enabling logic present
-        # in commented out form so it can be enabled as needed.
-#     - name: Upload Package
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: BRLCAD_OSX
-#         path: ${{ github.workspace }}/build/BRL-CAD*gz
-
+          cmake --build build_archives --config Debug --target distcheck-source_archives
 
