--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -20,6 +20,8 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           sudo apt-get update
+          # Get the lcov tool and its dependencies
+          sudo apt-get install lcov
           # We want as many deps pre-installed as we can for this - the analyzer setup slows their compilation
           sudo apt-get install libproj-dev libgdal-dev tcl-dev tk-dev itcl3-dev itk3-dev libpng-dev zlib1g-dev libxml2-dev libxslt1-dev xsltproc libxml2-utils astyle xserver-xorg-dev libx11-dev libxi-dev libxext-dev libglu1-mesa-dev
           sudo apt-get clean
