--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -59,7 +59,7 @@ jobs:
           #genhtml coverage_cad.info --output-directory lcov-output
           mv coverage_cad.info ..
 
-      - name: Report Coverage Test
-        uses: romeovs/lcov-reporter-action@latest
+      - name: Upload
+        uses: codecov/codecov-action@v2
         with:
-          lcov-file: ./coverage_cad.info
+          files: ./coverage_cad.info
